 Summary of important user-visible changes for SPEKcheck 0.1:
-------------------------------------------------------------

 ** Initial release of SPEKcheck.