@@ -1,3 +1,9 @@
+ Summary of important user-visible changes for SPEKcheck 0.2:
+-------------------------------------------------------------
+
+ ** Fixed drag and drop of filters for Chrome and Safari.
+
+
  Summary of important user-visible changes for SPEKcheck 0.1:
 -------------------------------------------------------------
 
